added Entity superclass

--- a/examples/index.html
+++ b/examples/index.html
@@ -23,7 +23,7 @@
         let wrapper = new ThreeJSWrapper(canvas);
 
         //create entitites
-        let sphere = new WireframeSphere(wrapper,{z:-25});
+        let sphere = new WireframeSphere({z:-25});
 
         //add enitities
         wrapper.addEntity(sphere);
