gltf model loaded + animation

--- a/examples/index.html
+++ b/examples/index.html
@@ -16,6 +16,7 @@
         <ul class="menu">
           <li><a href="normal-box.html">Normal Box</a></li>
           <li><a href="wireframe-sphere.html">Wireframe Sphere</a></li>
+          <li><a href="load-gltf-model.html">Load GLTF Model</a></li>
         </ul>
       </nav>
 </body>
