moved examples index to root, added favico

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <h1>Examples</h1>
     <nav class="navigation">
         <ul class="menu">
-          <li><a href="normal-box.html">Normal Box</a></li>
-          <li><a href="wireframe-sphere.html">Wireframe Sphere</a></li>
-          <li><a href="load-gltf-model.html">Load GLTF Model</a></li>
+          <li><a href="examples/normal-box.html">Normal Box</a></li>
+          <li><a href="examples/wireframe-sphere.html">Wireframe Sphere</a></li>
+          <li><a href="examples/load-gltf-model.html">Load GLTF Model</a></li>
         </ul>
       </nav>
 </body>
