added text canvas example

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <li><a href="examples/normal-box.html">Normal Box</a></li>
           <li><a href="examples/wireframe-sphere.html">Wireframe Sphere</a></li>
           <li><a href="examples/load-gltf-model.html">Load GLTF Model</a></li>
+          <li><a href="examples/canvas-text.html">Canvas Text</a></li>
         </ul>
       </nav>
 </body>
