added tarot card to index

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <li><a href="examples/wireframe-sphere.html">Wireframe Sphere</a></li>
           <li><a href="examples/load-gltf-model.html">Load GLTF Model</a></li>
           <li><a href="examples/canvas-text.html">Canvas Text</a></li>
+          <li><a href="examples/tarot-card.html">Tarot Card</a></li>
         </ul>
       </nav>
 </body>
