--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <li><a href="examples/load-gltf-model.html">Load GLTF Model</a></li>
           <li><a href="examples/canvas-text.html">Canvas Text</a></li>
           <li><a href="examples/tarot-card.html">Tarot Card</a></li>
+          <li><a href="examples/globe.html">Globe</a></li>
         </ul>
       </nav>
 </body>
