improvments to examples page

--- a/index.html
+++ b/index.html
@@ -9,18 +9,47 @@
         html,body { overflow: hidden;margin: 0; width: 100%; height: 100%; }
         canvas { width: 100%; height: 100%; }
     </style>
+    <link rel="stylesheet" href="examples/app.css" />
 </head>
 <body>
     <h1>Examples</h1>
-    <nav class="navigation">
-        <ul class="menu">
-          <li><a href="examples/normal-box.html">Normal Box</a></li>
-          <li><a href="examples/wireframe-sphere.html">Wireframe Sphere</a></li>
-          <li><a href="examples/load-gltf-model.html">Load GLTF Model</a></li>
-          <li><a href="examples/canvas-text.html">Canvas Text</a></li>
-          <li><a href="examples/tarot-card.html">Tarot Card</a></li>
-          <li><a href="examples/globe.html">Globe</a></li>
-        </ul>
-      </nav>
+    <div class="cards">
+        <div class="card">
+          <a href="examples/normal-box.html">
+            <img src="examples/screenshots/normal-box.png" />
+            <h2>Normal Box</h2>
+          </a>
+        </div>
+        <div class="card">
+          <a href="examples/wireframe-sphere.html">
+            <img src="examples/screenshots/wireframe-sphere.png" />
+            <h2>Wireframe Sphere</h2>
+          </a>
+        </div>
+        <div class="card">
+          <a href="examples/load-gltf-model.html">
+            <img src="examples/screenshots/load-gltf-model.png" />
+            <h2>Load GLTF Model</h2>
+          </a>
+        </div>
+        <div class="card">
+          <a href="examples/canvas-text.html">
+            <img src="examples/screenshots/canvas-text.png" />
+            <h2>Canvas Text</h2>
+          </a>
+        </div>
+        <div class="card">
+          <a href="examples/tarot-card.html">
+            <img src="examples/screenshots/tarot-card.png" />
+            <h2>Tarot Card</h2>
+          </a>
+        </div>
+        <div class="card">
+          <a href="examples/globe.html">
+            <img src="examples/screenshots/globe.png" />
+            <h2>Globe</h2>
+          </a>
+        </div>
+    </div>
 </body>
 </html>
