--- a/examples/normal-box.html
+++ b/examples/normal-box.html
@@ -9,8 +9,15 @@
         html,body { overflow: hidden;margin: 0; width: 100%; height: 100%; }
         canvas { width: 100%; height: 100%; }
     </style>
-</head>
-<body>
+    <link rel="stylesheet" href="/examples/app.css"/>
+  </head>
+  <body>
+    <nav>
+      <ul>
+        <li><a href="/">Back</a></li>
+        <li><a href="https://github.com/lostways/three-js-wrapper/blob/master/examples/normal-box.html">View Code</a></li>
+      </ul>
+    </nav>
     <canvas id="canvas"></canvas>
     <script type="module">
         /**
