--- a/examples/tarot-card.html
+++ b/examples/tarot-card.html
@@ -18,8 +18,15 @@
         height: 100%;
       }
     </style>
+    <link rel="stylesheet" href="/examples/app.css"/>
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="/">Back</a></li>
+        <li><a href="https://github.com/lostways/three-js-wrapper/blob/master/examples/tarot-card.html">View Code</a></li>
+      </ul>
+    </nav>
     <canvas id="canvas"></canvas>
     <script type="module">
       /**
