--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ThreeJS Wrapper Examples</title>
     <style type="text/css">
-        html,body { overflow: hidden;margin: 0; width: 100%; height: 100%; }
+        html,body { margin: 0; width: 100%; height: 100%; }
         canvas { width: 100%; height: 100%; }
     </style>
     <link rel="stylesheet" href="examples/app.css" />
 </head>
 <body>
+    <nav>
+      <ul>
+        <li><a href="https://github.com/lostways/three-js-wrapper">View Code</a></li>
+      </ul>
+    </nav>
+  <div class=main>
     <h1>Examples</h1>
     <div class="cards">
         <div class="card">
@@ -51,5 +57,6 @@
           </a>
         </div>
     </div>
+  </div>
 </body>
 </html>
