example page improvements

--- a/index.html
+++ b/index.html
@@ -18,42 +18,47 @@
       </ul>
     </nav>
   <div class=main>
-    <h1>Examples</h1>
+    <section class="intro">
+      <h1>ThreeJS Wrapper</h1>
+      <p>ThreeJS Wrapper is a simple lightweight framework for adding 3d objects and animations to your site.</p>
+      <p>Get started by checking out the <a href="https://github.com/lostways/three-js-wrapper">docs</a> or the examples below.</p>
+    </section>
+    <h2>Examples</h2>
     <div class="cards">
         <div class="card">
           <a href="examples/normal-box.html">
             <img src="examples/screenshots/normal-box.png" />
-            <h2>Normal Box</h2>
+            <h3>Normal Box</h3>
           </a>
         </div>
         <div class="card">
           <a href="examples/wireframe-sphere.html">
             <img src="examples/screenshots/wireframe-sphere.png" />
-            <h2>Wireframe Sphere</h2>
+            <h3>Wireframe Sphere</h3>
           </a>
         </div>
         <div class="card">
           <a href="examples/load-gltf-model.html">
             <img src="examples/screenshots/load-gltf-model.png" />
-            <h2>Load GLTF Model</h2>
+            <h3>Load GLTF Model</h3>
           </a>
         </div>
         <div class="card">
           <a href="examples/canvas-text.html">
             <img src="examples/screenshots/canvas-text.png" />
-            <h2>Canvas Text</h2>
+            <h3>Canvas Text</h3>
           </a>
         </div>
         <div class="card">
           <a href="examples/tarot-card.html">
             <img src="examples/screenshots/tarot-card.png" />
-            <h2>Tarot Card</h2>
+            <h3>Tarot Card</h3>
           </a>
         </div>
         <div class="card">
           <a href="examples/globe.html">
             <img src="examples/screenshots/globe.png" />
-            <h2>Globe</h2>
+            <h3>Globe</h3>
           </a>
         </div>
     </div>
