mouse interaction example

--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
             <h3>Globe</h3>
           </a>
         </div>
+        <div class="card">
+          <a href="examples/interaction-pointer.html">
+            <img src="examples/screenshots/wireframe-sphere.png" />
+            <h3>Mouse Interaction</h3>
+          </a>
+        </div>
     </div>
   </div>
 </body>
