changed to pointer event, updated colors

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         </div>
         <div class="card">
           <a href="examples/interaction-pointer.html">
-            <img src="examples/screenshots/wireframe-sphere.png" />
-            <h3>Mouse Interaction</h3>
+            <img src="examples/screenshots/interaction-pointer.png" />
+            <h3>Pointer Interaction</h3>
           </a>
         </div>
     </div>
