--- a/examples/interaction-pointer.html
+++ b/examples/interaction-pointer.html
@@ -21,8 +21,9 @@
     <canvas id="canvas"></canvas>
     <script type="module">
         /**
-         * Example: Displays a rotating wireframe sphere
+         * Example: Change color of sphere when pointer is over it. 
          **/
+
         import ThreeJSWrapper from '../build/three-js-wrapper.module.js';
         import WireframeSphere from './entities/WireframeSphere.js';
 
@@ -30,7 +31,7 @@
         let wrapper = new ThreeJSWrapper(canvas);
 
         //create entitites
-        let sphere = new WireframeSphere({z:-25});
+        let sphere = new WireframeSphere({z:-25, color: "#FFFFFF"});
 
         //add enitities
         wrapper.addEntity(sphere);
@@ -42,21 +43,21 @@
         wrapper.start();
 
         //add event listener for pointer
-        window.addEventListener('mousemove', onMouseMove, false);
+        window.addEventListener('pointermove', onPointerMove, false);
 
-        //setup raycaster and mouse vector
+        //setup raycaster and pointer vector
         let raycaster = new ThreeJSWrapper.THREE.Raycaster();
-        let mouse = new ThreeJSWrapper.THREE.Vector2();
+        let pointer = new ThreeJSWrapper.THREE.Vector2();
 
-        //update the mouse vetor based on mouse position
-        function updateMouseVector(event) {
-          mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
-          mouse.y = - (event.clientY / window.innerHeight) * 2 + 1;
+        //update the pointer vetor based on mouse position
+        function updatePointerVector(event) {
+          pointer.x = (event.clientX / window.innerWidth) * 2 - 1;
+          pointer.y = - (event.clientY / window.innerHeight) * 2 + 1;
         }
 
         //check to see if mouse vetor intersects given object
         function raycast(object3d) {
-          raycaster.setFromCamera(mouse, wrapper.camera);
+          raycaster.setFromCamera(pointer, wrapper.camera);
           let intersects = raycaster.intersectObject(object3d);
           if ( intersects.length > 0) {
             return true;
@@ -65,12 +66,12 @@
           }
         }
 
-        function onMouseMove(event) {
-          updateMouseVector(event);
+        function onPointerMove(event) {
+          updatePointerVector(event);
           if (raycast(sphere.object3d)) {
-            sphere.object3d.material.color.set(0xffffff);
+            sphere.object3d.material.color.set(0x00CC00);
           } else {
-            sphere.object3d.material.color.set(0xCC0000);
+            sphere.object3d.material.color.set(0xFFFFFF);
           }
         }
     </script>
