added starfield example

--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
             <h3>Dat Gui</h3>
           </a>
         </div>
+        <div class="card">
+          <a href="examples/starfield.html">
+            <img src="examples/screenshots/starfield.png" />
+            <h3>Star Field</h3>
+          </a>
+        </div>
     </div>
   </div>
 </body>
