--- a/examples/globe.html
+++ b/examples/globe.html
@@ -18,13 +18,18 @@
         height: 100%;
       }
     </style>
-    <link rel="stylesheet" href="/examples/app.css"/>
+    <link rel="stylesheet" href="/examples/app.css" />
   </head>
   <body>
     <nav>
       <ul>
         <li><a href="/">Back</a></li>
-        <li><a href="https://github.com/lostways/three-js-wrapper/blob/master/examples/globe.html">View Code</a></li>
+        <li>
+          <a
+            href="https://github.com/lostways/three-js-wrapper/blob/master/examples/globe.html"
+            >View Code</a
+          >
+        </li>
       </ul>
     </nav>
     <canvas id="canvas"></canvas>
@@ -38,11 +43,10 @@
 
       let canvas = document.getElementById("canvas");
       let wrapper = new ThreeJSWrapper(canvas);
-      let lights = new AmbientAndSpotLight({spot: 0});
-      let globe = new Globe({z : -1.5});
+      let lights = new AmbientAndSpotLight({ spot: 0 });
+      let globe = new Globe({ z: -1.5 });
 
-      globe.initModel().then( () => {
-
+      globe.initModel().then(() => {
         wrapper.addEntity(globe);
 
         //add lights
