--- a/examples/load-gltf-model.html
+++ b/examples/load-gltf-model.html
@@ -18,13 +18,18 @@
         height: 100%;
       }
     </style>
-    <link rel="stylesheet" href="/examples/app.css"/>
+    <link rel="stylesheet" href="/examples/app.css" />
   </head>
   <body>
     <nav>
       <ul>
         <li><a href="/">Back</a></li>
-        <li><a href="https://github.com/lostways/three-js-wrapper/blob/master/examples/load-gltf-model.html">View Code</a></li>
+        <li>
+          <a
+            href="https://github.com/lostways/three-js-wrapper/blob/master/examples/load-gltf-model.html"
+            >View Code</a
+          >
+        </li>
       </ul>
     </nav>
     <canvas id="canvas"></canvas>
