--- a/examples/dat-gui.html
+++ b/examples/dat-gui.html
@@ -1,137 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>ThreeJS Wrapper Dat Gui Example</title>
-  <style type="text/css">
-    html,
-    body {
-      overflow: hidden;
-      margin: 0;
-      width: 100%;
-      height: 100%;
-    }
-
-    canvas {
-      width: 100%;
-      height: 100%;
-    }
-  </style>
-  <link rel="stylesheet" href="/examples/app.css" />
-</head>
-
-<body>
-  <nav>
-    <ul>
-      <li><a href="/">Back</a></li>
-      <li><a href="https://github.com/lostways/three-js-wrapper/blob/master/examples/dat-gui.html">View Code</a></li>
-    </ul>
-  </nav>
-  <canvas id="canvas"></canvas>
-  <script type="module">
-    /**
-     * Example: Demo of dat gui using the Utah Teapot geometry
-     **/
-    import * as dat from "../node_modules/dat.gui/build/dat.gui.module.js";
-    import ThreeJSWrapper from '../build/three-js-wrapper.module.js';
-    import AmbientAndSpotLight from './entities/AmbientAndSpotLight.js';
-    import UtahTeapot from './entities/UtahTeapot.js';
-
-    let canvas = document.getElementById("canvas");
-    let wrapper = new ThreeJSWrapper(canvas);
-
-    //create entitites
-    let effectController;
-    let teapot;
-    let teapotZ = -100;
-    let segments = -1;
-    let shading = "smooth";
-    let bottom = true;
-    let lid = true;
-    let body = true;
-    let fitLid = false;
-    let blinn = true;
-
-    let lights = new AmbientAndSpotLight({ ambeint: 1, spot: .05 });
-
-
-    //add enitities
-    wrapper.addEntity(lights);
-
-    //position controls
-    wrapper.controls.target.set(0, 0, -100);
-
-    wrapper.start();
-
-    setupGui();
-    render();
-
-    function setupGui() {
-
-      effectController = {
-        segments: 15,
-        shading: "smooth",
-        lid: true,
-        body: true,
-        bottom: true,
-        fitLid: false,
-        blinn: true,
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>ThreeJS Wrapper Dat Gui Example</title>
+    <style type="text/css">
+      html,
+      body {
+        overflow: hidden;
+        margin: 0;
+        width: 100%;
+        height: 100%;
       }
 
-      let h;
-      const gui = new dat.GUI();
+      canvas {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
+    <link rel="stylesheet" href="/examples/app.css" />
+  </head>
 
-      //controls
-      gui.add(effectController, "segments", [2, 3, 4, 5, 6, 8, 10, 15, 20, 30, 40, 50]).name("Segments").onChange(render);
-      gui.add(effectController, "shading", ["wireframe", "flat", "smooth", "glossy"]).name("Shading").onChange(render);
-      gui.add(effectController, 'lid').name('display lid').onChange(render);
-      gui.add(effectController, 'body').name('display body').onChange(render);
-      gui.add(effectController, 'bottom').name('display bottom').onChange(render);
-      gui.add(effectController, 'fitLid').name('snug lid').onChange(render);
-      gui.add(effectController, 'blinn').name('original scale').onChange(render);
-    }
+  <body>
+    <nav>
+      <ul>
+        <li><a href="/">Back</a></li>
+        <li>
+          <a
+            href="https://github.com/lostways/three-js-wrapper/blob/master/examples/dat-gui.html"
+            >View Code</a
+          >
+        </li>
+      </ul>
+    </nav>
+    <canvas id="canvas"></canvas>
+    <script type="module">
+      /**
+       * Example: Demo of dat gui using the Utah Teapot geometry
+       **/
+      import * as dat from "../node_modules/dat.gui/build/dat.gui.module.js";
+      import ThreeJSWrapper from "../build/three-js-wrapper.module.js";
+      import AmbientAndSpotLight from "./entities/AmbientAndSpotLight.js";
+      import UtahTeapot from "./entities/UtahTeapot.js";
 
-    function render() {
+      let canvas = document.getElementById("canvas");
+      let wrapper = new ThreeJSWrapper(canvas);
 
-      if (typeof teapot != "undefined") {
-        wrapper.removeEntity(teapot);
+      //create entitites
+      let effectController;
+      let teapot;
+      let teapotZ = -100;
+      let segments = -1;
+      let shading = "smooth";
+      let bottom = true;
+      let lid = true;
+      let body = true;
+      let fitLid = false;
+      let blinn = true;
+
+      let lights = new AmbientAndSpotLight({ ambeint: 1, spot: 0.05 });
+
+      //add enitities
+      wrapper.addEntity(lights);
+
+      //position controls
+      wrapper.controls.target.set(0, 0, -100);
+
+      wrapper.start();
+
+      setupGui();
+      render();
+
+      function setupGui() {
+        effectController = {
+          segments: 15,
+          shading: "smooth",
+          lid: true,
+          body: true,
+          bottom: true,
+          fitLid: false,
+          blinn: true,
+        };
+
+        let h;
+        const gui = new dat.GUI();
+
+        //controls
+        gui
+          .add(
+            effectController,
+            "segments",
+            [2, 3, 4, 5, 6, 8, 10, 15, 20, 30, 40, 50]
+          )
+          .name("Segments")
+          .onChange(render);
+        gui
+          .add(effectController, "shading", [
+            "wireframe",
+            "flat",
+            "smooth",
+            "glossy",
+          ])
+          .name("Shading")
+          .onChange(render);
+        gui.add(effectController, "lid").name("display lid").onChange(render);
+        gui.add(effectController, "body").name("display body").onChange(render);
+        gui
+          .add(effectController, "bottom")
+          .name("display bottom")
+          .onChange(render);
+        gui.add(effectController, "fitLid").name("snug lid").onChange(render);
+        gui
+          .add(effectController, "blinn")
+          .name("original scale")
+          .onChange(render);
       }
 
-      if (effectController.segments !== segments ||
+      function render() {
+        if (typeof teapot != "undefined") {
+          wrapper.removeEntity(teapot);
+        }
+
+        if (
+          effectController.segments !== segments ||
           effectController.shading !== shading ||
           effectController.lid !== lid ||
           effectController.body !== body ||
           effectController.bottom !== bottom ||
           effectController.fitLid !== fitLid ||
-          effectController.blinn !== blinn) {
+          effectController.blinn !== blinn
+        ) {
+          segments = effectController.segments;
+          shading = effectController.shading;
+          lid = effectController.lid;
+          body = effectController.body;
+          bottom = effectController.bottom;
+          fitLid = effectController.fitLid;
+          blinn = effectController.blinn;
+        }
 
-        segments = effectController.segments;
-        shading = effectController.shading;
-        lid = effectController.lid;
-        body = effectController.body;
-        bottom = effectController.bottom;
-        fitLid = effectController.fitLid;
-        blinn = effectController.blinn;
+        teapot = new UtahTeapot({
+          z: teapotZ,
+          segments: segments,
+          shading: shading,
+          bottom: bottom,
+          lid: lid,
+          body: body,
+          fitLid: fitLid,
+          blinn: blinn,
+        });
+
+        wrapper.addEntity(teapot);
       }
-
-      teapot = new UtahTeapot({ 
-        z: teapotZ,
-        segments: segments,
-        shading: shading,
-        bottom: bottom,
-        lid: lid,
-        body: body,
-        fitLid: fitLid,
-        blinn: blinn 
-      });
-
-      wrapper.addEntity(teapot);
-    }
-
-  </script>
-</body>
-
+    </script>
+  </body>
 </html>
