--- a/examples/starfield.html
+++ b/examples/starfield.html
@@ -1,95 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>ThreeJS Wrapper Starfield Demo</title>
     <style type="text/css">
-        html,
-        body {
-            overflow: hidden;
-            margin: 0;
-            width: 100%;
-            height: 100%;
-        }
+      html,
+      body {
+        overflow: hidden;
+        margin: 0;
+        width: 100%;
+        height: 100%;
+      }
 
-        canvas {
-            width: 100%;
-            height: 100%;
-        }
+      canvas {
+        width: 100%;
+        height: 100%;
+      }
     </style>
     <link rel="stylesheet" href="/examples/app.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <nav>
-        <ul>
-            <li><a href="/">Back</a></li>
-            <li><a href="https://github.com/lostways/three-js-wrapper/blob/master/examples/starfield.html">View Code</a>
-            </li>
-        </ul>
+      <ul>
+        <li><a href="/">Back</a></li>
+        <li>
+          <a
+            href="https://github.com/lostways/three-js-wrapper/blob/master/examples/starfield.html"
+            >View Code</a
+          >
+        </li>
+      </ul>
     </nav>
     <canvas id="canvas"></canvas>
     <script type="module">
-        /**
-         * Example: Demo of a moving starfield
-         **/
-        import * as dat from "../node_modules/dat.gui/build/dat.gui.module.js";
-        import ThreeJSWrapper from '../build/three-js-wrapper.module.js';
-        import Starfield from './entities/Starfield.js';
+      /**
+       * Example: Demo of a moving starfield
+       **/
+      import * as dat from "../node_modules/dat.gui/build/dat.gui.module.js";
+      import ThreeJSWrapper from "../build/three-js-wrapper.module.js";
+      import Starfield from "./entities/Starfield.js";
 
-        let canvas = document.getElementById("canvas");
-        let wrapper = new ThreeJSWrapper(canvas);
+      let canvas = document.getElementById("canvas");
+      let wrapper = new ThreeJSWrapper(canvas);
 
-        let starfield;
-        let effectController;
-        let speed = 1;
+      let starfield;
+      let effectController;
+      let speed = 1;
 
+      function setupGui() {
+        effectController = {
+          speed: 1,
+        };
 
-        function setupGui() {
-            effectController = {
-                speed: 1
-            };
+        const gui = new dat.GUI();
 
-            const gui = new dat.GUI();
+        //add speed to gui
+        gui.add(effectController, "speed", 0, 10, 0.1).onChange(render);
+      }
 
-            //add speed to gui
-            gui.add(effectController, "speed", 0, 10, 0.1).onChange(render);
+      //initialize the scene (only called once)
+      function init() {
+        wrapper.controls.enabled = false;
+        wrapper.start();
+
+        //add the entity
+        starfield = new Starfield({ speed: speed });
+
+        starfield.generateStars().then(() => {
+          wrapper.addEntity(starfield);
+        });
+      }
+
+      function render() {
+        //check to see if the speed has changed
+        if (effectController.speed !== speed) {
+          speed = effectController.speed;
+          starfield.setSpeed(speed);
         }
+      }
 
-        //initialize the scene (only called once)
-        function init() {
-            wrapper.controls.enabled = false;
-            wrapper.start();
+      //init
+      init();
 
-            //add the entity
-            starfield = new Starfield({ speed: speed });
+      //setup GUI
+      setupGui();
 
-            starfield.generateStars().then(() => {
-                wrapper.addEntity(starfield);
-            });
-
-        }
-
-        function render() {
-            //check to see if the speed has changed
-            if (effectController.speed !== speed) {
-                speed = effectController.speed;
-                starfield.setSpeed(speed);
-            }
-        }
-
-        //init
-        init();
-
-        //setup GUI
-        setupGui();
-
-        //first render
-        render();
+      //first render
+      render();
     </script>
-</body>
-
+  </body>
 </html>
