--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
             <h3>Star Field</h3>
           </a>
         </div>
+        <div class="card">
+          <a href="examples/transparent-wireframe-sphere.html">
+            <img src="examples/screenshots/transparent-wireframe-sphere.png" />
+            <h3>Transparent Wireframe Sphere</h3>
+          </a>
+        </div>
     </div>
   </div>
 </body>
