changed name of example

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="card">
           <a href="examples/transparent-wireframe-sphere.html">
             <img src="examples/screenshots/transparent-wireframe-sphere.png" />
-            <h3>Transparent Wireframe Sphere</h3>
+            <h3>Transparent Background</h3>
           </a>
         </div>
     </div>
