--- a/examples/transparent-background.html
+++ b/examples/transparent-background.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>ThreeJS Wrapper Transparent Wireframe Sphere</title>
+    <title>ThreeJS Wrapper Transparent Background</title>
     <style type="text/css">
       html,
       body {
@@ -27,7 +27,7 @@
         <li><a href="/">Back</a></li>
         <li>
           <a
-            href="https://github.com/lostways/three-js-wrapper/blob/master/examples/transparent-wireframe-sphere.html"
+            href="https://github.com/lostways/three-js-wrapper/blob/master/examples/transparent-background.html"
             >View Code</a
           >
         </li>
