updated threejs, fixed tarot example, fixed lighting

--- a/examples/dat-gui.html
+++ b/examples/dat-gui.html
@@ -68,6 +68,9 @@
       //position controls
       wrapper.controls.target.set(0, 0, -100);
 
+      //better lights
+      wrapper.renderer.useLegacyLights = false;
+
       wrapper.start();
 
       setupGui();
