--- a/examples/load-gltf-model.html
+++ b/examples/load-gltf-model.html
@@ -58,7 +58,7 @@
         wrapper.addEntity(lights);
 
         //better lights
-        wrapper.renderer.physicallyCorrectLights = true;
+        wrapper.renderer.useLegacyLights = false;
 
         //position controls
         wrapper.controls.target.set(0, 0, -125);
