--- a/examples/tarot-card.html
+++ b/examples/tarot-card.html
@@ -51,7 +51,7 @@
       wrapper.addEntity(tarotCard);
 
       //better lights
-      wrapper.renderer.physicallyCorrectLights = true;
+      wrapper.renderer.useLegacyLights = false;
 
       //position controls
       wrapper.controls.target.set(0, 0, -2.5);
